--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 	<meta content="width=device-width, initial-scale=1.0" name="viewport" />
 	<!-- link css -->
 	<link rel="stylesheet" href="assets/bootstrap/css/bootstrap.min.css" />
-	<link href="assets/css/style.css?v=1676463490861" rel="stylesheet" />
+	<link href="assets/css/style.css?v=1676639606766" rel="stylesheet" />
 	<link href="assets/css/form.min.css" rel="stylesheet" />
 	<title>IWantSeats</title>
 	<link href="assets/images/logo.png" rel="icon" sizes="185x191" type="image/png" />
@@ -593,12 +593,13 @@
 	</script>
 	<script rel="script" src="assets/js/jquery.min.js"></script>
 	<script src="assets/bootstrap/js/bootstrap.min.js"></script>
+    <script rel="script" src="assets/js/moment.min.js"></script>
 	<script rel="script" src="assets/js/axios.min.js"></script>
 	<script rel="script" src="assets/js/lodash.min.js"></script>
 	<script rel="script" src="assets/swal/sweetalert2.min.js"></script>
 	<script rel="script" src="assets/js/loadingoverlay.min.js"></script>
-	<script async rel="script" src="assets/js/app.js?v=1676463490861"></script>
-	<script async rel="script" src="assets/js/main.js?v=1676463490861"></script>
+	<script async rel="script" src="assets/js/app.js?v=1676639606766"></script>
+	<script async rel="script" src="assets/js/main.js?v=1676639606766"></script>
 	<script>
 		$("#chkReturn").change(function () {
 			if (this.checked) {
