--- a/user-admin.html
+++ b/user-admin.html
@@ -7,10 +7,9 @@
     <meta content="width=device-width, initial-scale=1.0" name="viewport" />
     <!-- link css -->
     <link rel="stylesheet" href="assets/bootstrap/css/bootstrap.min.css" />
-    <link href="assets/css/style.css?v=1676896879441" rel="stylesheet" />
-    <link href="assets/css/admin.min.css?v=1676896879441" rel="stylesheet" />
-    <link href="assets/css/table.min.css?v=1676896879441" rel="stylesheet" />
-
+    <link href="assets/css/style.css?v=1676899927138" rel="stylesheet" />
+    <link href="assets/css/admin.min.css?v=1676899927138" rel="stylesheet" />
+    <link href="assets/css/table.min.css?v=1676899927138" rel="stylesheet" />
     <!-- unicons -->
     <link href="https://unicons.iconscout.com/release/v4.0.0/css/line.css" rel="stylesheet" />
 
@@ -54,7 +53,7 @@
                             <!--                        </label>-->
                         </div>
                         <div style="text-align: left; padding-top: 10px">
-                            <label for="firstname" style="font-size: 10pt;">Firstname</label>
+                            <label for="firstname" style="font-size: 10pt;">Firstname <i class="fa-sharp fa-regular fa-square-info"></i></label>
                             <input id="firstname" required style="margin-top: 0!important;" type="text" />
                         </div>
                         <div style="text-align: left; padding-top: 10px">
@@ -210,8 +209,8 @@
     <script rel="script" src="assets/js/axios.min.js"></script>
     <script rel="script" src="assets/js/table.min.js"></script>
     <script rel="script" src="assets/js/moment.min.js"></script>
-    <script rel="script" src="assets/js/app.js?v=1676896879441"></script>
-    <script rel="script" src="assets/js/main.js?v=1676896879441"></script>
+    <script rel="script" src="assets/js/app.js?v=1676899927138"></script>
+    <script rel="script" src="assets/js/main.js?v=1676899927138"></script>
 
     <script>
             let loginInfo = JSON.parse(localStorage.getItem('loginInfo'));
