--- a/joybus.html
+++ b/joybus.html
@@ -7,7 +7,7 @@
     <!-- link css -->
     <link rel="stylesheet" href="assets/bootstrap/css/bootstrap.min.css" />
     <link href="assets/css/style.css" rel="stylesheet"/>
-    <link href="assets/css/style.css?v=1676899927138" rel="stylesheet" />
+    <link href="assets/css/style.cssv?=1676951130000" rel="stylesheet" />
     <link href="assets/css/oparator.min.css" rel="stylesheet"/>
     <link href="assets/css/table.min.css" rel="stylesheet"/>
 	<link href="assets/swal/sweetalert2.min.css" rel="stylesheet" />
@@ -312,7 +312,7 @@
 <script rel="script" src="assets/js/lodash.min.js"></script>
 <script rel="script" src="assets/swal/sweetalert2.min.js"></script>
 <script rel="script" src="assets/js/loadingoverlay.min.js"></script>
-<script async rel="script" src="assets/js/app.js?v=1676899927138"></script>
-<script async rel="script" src="assets/js/main.js?v=1676899927138"></script>
+<script async rel="script" src="assets/js/app.jsv?=1676951130000"></script>
+<script async rel="script" src="assets/js/main.jsv?=1676951130000"></script>
 </body>
 </html>
