--- a/booking.html
+++ b/booking.html
@@ -6,10 +6,10 @@
     <meta content="width=device-width, initial-scale=1.0" name="viewport" />
     <!-- link css -->
     <link rel="stylesheet" href="assets/bootstrap/css/bootstrap.min.css" />
-    <link href="assets/css/style.cssv?=1676951130000" rel="stylesheet" />
-    <link href="assets/css/form.min.cssv?=1676951130000" rel="stylesheet" />
-    <link href="assets/css/booking.cssv?=1676951130000" rel="stylesheet" />
-    <link href="assets/css/buss.cssv?=1676951130000" rel="stylesheet" />
+    <link href="assets/css/style.css?v=1676951130000" rel="stylesheet" />
+    <link href="assets/css/form.min.css?v=1676951130000" rel="stylesheet" />
+    <link href="assets/css/booking.css?v=1676951130000" rel="stylesheet" />
+    <link href="assets/css/buss.css?v=1676951130000" rel="stylesheet" />
     <link href="assets/swal/sweetalert2.min.css" rel="stylesheet" />
 
     <!-- unicons -->
@@ -42,7 +42,7 @@
             -webkit-appearance: none;
         }
 
-        .border-pill-top{
+        .rounded-pill-top{
             border-radius: 50px 50px;
         }
 
@@ -695,9 +695,9 @@
     <script rel="script" src="assets/js/lodash.min.js"></script>
     <script rel="script" src="assets/swal/sweetalert2.min.js"></script>
     <script rel="script" src="assets/js/moment.min.js"></script>
-    <script async rel="script" src="assets/js/app.jsv?=1676951130000"></script>
-    <script async rel="script" src="assets/js/booking.jsv?=1676951130000"></script>
-    <script async rel="script" src="assets/js/main.jsv?=1676951130000"></script>
+    <script async rel="script" src="assets/js/app.js?v=1676951130000"></script>
+    <script async rel="script" src="assets/js/booking.js?v=1676951130000"></script>
+    <script async rel="script" src="assets/js/main.js?v=1676951130000"></script>
 
     <script>
         $("#chkReturn").change(function () {
