--- a/login.html
+++ b/login.html
@@ -7,7 +7,7 @@
   <meta content="width=device-width, initial-scale=1.0" name="viewport" />
   <!-- link css -->
   <link rel="stylesheet" href="assets/bootstrap/css/bootstrap.min.css" />
-  <link href="assets/css/style.cssv?=1676951130000" rel="stylesheet" />
+  <link href="assets/css/style.css?v=1676951130000" rel="stylesheet" />
   <link href="assets/css/form.min.css" rel="stylesheet" />
   <title>IWantSeats</title>
   <link href="assets/images/logo.png" rel="icon" sizes="185x191" type="image/png" />
@@ -109,7 +109,7 @@
   <script src="assets/bootstrap/js/bootstrap.min.js"></script>
   <script rel="script" src="assets/js/axios.min.js"></script>1676463490861
   <script rel="script" src="assets/swal/sweetalert2.all.js"></script>
-  <script rel="script" src="assets/js/app.jsv?=1676951130000"></script>
+  <script rel="script" src="assets/js/app.js?v=1676951130000"></script>
 
   <script>
     let axiosConfig = {
