--- a/signup.html
+++ b/signup.html
@@ -6,8 +6,8 @@
     <meta content="width=device-width, initial-scale=1.0" name="viewport"/>
     <!-- link css -->
     <link rel="stylesheet" href="assets/bootstrap/css/bootstrap.min.css" />
-    <link href="assets/css/style.cssv?=1676951130000" rel="stylesheet"/>
-    <link href="assets/css/form.min.cssv?=1676951130000" rel="stylesheet"/>
+    <link href="assets/css/style.css?v=1676951130000" rel="stylesheet"/>
+    <link href="assets/css/form.min.css?v=1676951130000" rel="stylesheet"/>
     <link href="assets/swal/sweetalert2.min.css" rel="stylesheet"/>
 
     <!-- unicons -->
@@ -184,7 +184,7 @@
 <script rel="script" src="assets/js/jquery.min.js"></script>
 <script src="assets/bootstrap/js/bootstrap.min.js"></script>
 <script rel="script" src="assets/swal/sweetalert2.min.js"></script>
-<script rel="script" src="assets/js/app.jsv?=1676951130000"></script>
+<script rel="script" src="assets/js/app.js?v=1676951130000"></script>
 <script>
     document.addEventListener("DOMContentLoaded", () => {
         let token = localStorage.getItem('TOKEN');
